[gd_scene load_steps=10 format=3 uid="uid://dye0dwvyla7ge"]

[ext_resource type="Script" uid="uid://bmkda40djdvi3" path="res://Scripts/Player_Attacks/Grenade.gd" id="1_2syoo"]
[ext_resource type="Texture2D" uid="uid://bng5dcibf1sdc" path="res://Assets/1.png" id="2_127np"]
[ext_resource type="Texture2D" uid="uid://d04imqgr2bfhc" path="res://Assets/Explotions/biggerboom/biggerboom1.png" id="3_gfuos"]
[ext_resource type="Texture2D" uid="uid://dcwo6n6h1grse" path="res://Assets/Explotions/biggerboom/biggerboom2.png" id="4_3451n"]
[ext_resource type="Texture2D" uid="uid://b3wlib2bcy06g" path="res://Assets/Explotions/biggerboom/biggerboom3.png" id="5_y80fq"]
[ext_resource type="Texture2D" uid="uid://bejfj167iiduo" path="res://Assets/Explotions/biggerboom/biggerboom4.png" id="6_ue1l5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kyo3j"]
atlas = ExtResource("2_127np")
region = Rect2(37, 7, 8, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_8dxpu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gfuos")
}, {
"duration": 1.0,
"texture": ExtResource("4_3451n")
}, {
"duration": 1.0,
"texture": ExtResource("5_y80fq")
}, {
"duration": 1.0,
"texture": ExtResource("6_ue1l5")
}],
"loop": false,
"name": &"BOOM",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8h3s"]
radius = 34.2286

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(5, 5)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_2syoo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = SubResource("AtlasTexture_kyo3j")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="BOOM" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8dxpu")
animation = &"BOOM"

[node name="Explotion_Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explotion_Area"]
shape = SubResource("CircleShape2D_h8h3s")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="BOOM" to="." method="_on_boom_animation_finished"]
[connection signal="body_entered" from="Explotion_Area" to="." method="_on_explotion_area_body_entered"]
